--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -6,15 +6,13 @@
     <BODY>
         <H1>States</H1>
 	<UL>
-	    {% set ns = namespace(x=0) %}
-	    {% for state in states %}
+	    {% for state in states|sort(attribute='name') %}
 	    <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
 	    	<UL>
-		{% for city in cities[ns.x] %}
-		<LI>{{ city.id }}: <B>{{ city.name }}</B>{{ ns.x }}</LI>
+		{% for city in state.cities|sort(attribute='name') %}
+		<LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
 		{% endfor %}
 		</UL>
-	    {% set ns.x = ns.x + 1 %}
 	    {% endfor %}
 	    </UL>
     </BODY>
